--- a/color-drip.css
+++ b/color-drip.css
@@ -40,7 +40,7 @@ body {
   top: -50%;
   left: 0;
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 75%, #ffffff 100%);
-  animation: drop 7s 0s infinite;
+  animation: drop 5s 0s infinite;
   animation-fill-mode: forwards;
   animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
 }
@@ -48,52 +48,62 @@ body {
 /* Different colors for each line's pseudo-element */
 .line:nth-child(1)::after {
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #FF4500 75%, #FF4500 100%);
-  animation-delay: 0.5s;
+  animation-delay: 0.25s;
 }
 
 .line:nth-child(2)::after {
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #32CD32 75%, #32CD32 100%);
-  animation-delay: 1s;
+  animation-delay: 0.5s;
 }
 
 .line:nth-child(3)::after {
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #1E90FF 75%, #1E90FF 100%);
-  animation-delay: 1.5s;
+  animation-delay: 0.75s;
 }
 
 .line:nth-child(4)::after {
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #FFD700 75%, #FFD700 100%);
-  animation-delay: 2s;
+  animation-delay: 1s;
 }
 
 .line:nth-child(5)::after {
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #8A2BE2 75%, #8A2BE2 100%);
-  animation-delay: 2.5s;
+  animation-delay: 1.25s;
 }
 
 .line:nth-child(6)::after {
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #20B2AA 75%, #20B2AA 100%);
-  animation-delay: 3s;
+  animation-delay: 1.5s;
 }
 
 .line:nth-child(7)::after {
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #DC143C 75%, #DC143C 100%);
-  animation-delay: 3.5s;
+  animation-delay: 1.75s;
 }
 
 .line:nth-child(8)::after {
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #00FA9A 75%, #00FA9A 100%);
-  animation-delay: 4s;
+  animation-delay: 2s;
 }
 
 .line:nth-child(9)::after {
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #FF1493 75%, #FF1493 100%);
-  animation-delay: 4.5s;
+  animation-delay: 2.25s;
 }
 
 .line:nth-child(10)::after {
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #00BFFF 75%, #00BFFF 100%);
-  animation-delay: 5s;
+  animation-delay: 2.5s;
+}
+
+.line:nth-child(11)::after {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #2600ff 75%, #2600ff 100%);
+  animation-delay: 2.75s;
+}
+
+.line:nth-child(12)::after {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #09003a 75%, #09003a 100%);
+  animation-delay: 3s;
 }
 
 @keyframes drop {
